# tevr-asr-tool

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  debug_logits.h  main.cpp  op_erf.cc  package.sh  tevr_asr_tool.cc
tevr-asr-data/: acoustic_model_00.tflite  acoustic_model_01.tflite  acoustic_model_02.tflite  acoustic_model_03.tflite
